--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -20,6 +20,12 @@
             <?php $displayPartialPaymentClass = '';?>
         <?php endif;?>
 
+        <?php $disableAutosaveEmailClass = 'hidden';?>
+        <?php $disableAutosaveEmail = Models_Mapper_ShoppingConfig::getInstance()->getConfigParam('allowAutosave');?>
+        <?php if (!empty($disableAutosaveEmail)):?>
+            <?php $disableAutosaveEmailClass = '';?>
+        <?php endif;?>
+
         <p>
             <?php echo $this->form->getElement('autoQuote')->renderLabel(); ?>
             <?php echo $this->form->getElement('autoQuote')->renderViewHelper(); ?>
@@ -32,6 +38,17 @@
             <?php echo $this->form->getElement('expirationDelay')->renderLabel(); ?>
             <?php echo $this->form->getElement('expirationDelay')->renderViewHelper(); ?>
         </p>
+        <fieldset class="background">
+            <p>
+                <?php echo $this->form->getElement('allowAutosave')->renderLabel(); ?>
+                <?php echo $this->form->getElement('allowAutosave')->renderViewHelper(); ?>
+            </p>
+
+            <p id="disable-autosave-email-block" class="mb10px <?php echo $disableAutosaveEmailClass;?>">
+                <?php echo $this->form->getElement('disableAutosaveEmail')->renderLabel(); ?>
+                <?php echo $this->form->getElement('disableAutosaveEmail')->renderViewHelper(); ?>
+            </p>
+        </fieldset>
         <p>
             <?php echo $this->form->getElement('quoteDraggableProducts')->renderLabel(); ?>
             <?php echo $this->form->getElement('quoteDraggableProducts')->renderViewHelper(); ?>
@@ -135,6 +152,15 @@ $(document).ready(function(){
         $('#quote-payment-types').data('prev-option', selectedOption);
     });
 
+    $(document).on('change', '#allow-autosave-quote', function () {
+        if ($(this).is(':checked')) {
+            $('#disable-autosave-email-block').removeClass('hidden');
+        } else {
+            $('#disable-autosave-email-block').addClass('hidden');
+            $('#disable-autosave-email').prop('checked', false);
+        }
+    });
+
     $(document).on("click", "#applySettings", function(e){
           e.preventDefault();
           var autoQuote = 0,
@@ -142,7 +168,9 @@ $(document).ready(function(){
               enableQuoteDefaultType = 0,
               partialNotifyAfterType = $('#partial-notify-after-type').val(),
               partialNotifyAfterQuantity = $('#partial-notify-after-quantity').val(),
-              enabledPartialPayment = 0;
+              enabledPartialPayment = 0,
+              allowAutosave = 0,
+              disableAutosaveEmail = 0;
 
           if($('#auto-quote').prop("checked")){
               autoQuote = 1;
@@ -160,24 +188,34 @@ $(document).ready(function(){
               enabledPartialPayment = 1;
           }
 
+        if($('#allow-autosave-quote').prop("checked")){
+            allowAutosave = 1;
+        }
+
+        if($('#disable-autosave-email').prop("checked")){
+            disableAutosaveEmail = 1;
+        }
+
           $.ajax({
             type: "POST",
             url: '<?php echo $this->websiteUrl;?>plugin/quote/run/settings/',
             dataType: "json",
             data: {
-                autoQuote: autoQuote,
-                quoteDraggableProducts: draggableProducts,
-                quoteTemplate: $('#quote-template option:selected').val(),
-                expirationDelay: $('#expiration-delay').val(),
-                enableQuoteDefaultType: enableQuoteDefaultType,
-                quotePaymentType: $('#quote-payment-types').val(),
-                quotePartialPercentage: $('#quote-partial-percentage').val(),
-                quoteDownloadLabel: $('#quote-download-label').val(),
-                enabledPartialPayment: enabledPartialPayment,
-                partialNotifyAfterType: partialNotifyAfterType,
-                partialNotifyAfterQuantity: partialNotifyAfterQuantity,
-                quotePartialType: $('#quote-partial-type').val(),
-                secureToken: $('.quote-secure-token').val()
+                autoQuote                   : autoQuote,
+                quoteDraggableProducts      : draggableProducts,
+                quoteTemplate               : $('#quote-template option:selected').val(),
+                expirationDelay             : $('#expiration-delay').val(),
+                enableQuoteDefaultType      : enableQuoteDefaultType,
+                quotePaymentType            : $('#quote-payment-types').val(),
+                quotePartialPercentage      : $('#quote-partial-percentage').val(),
+                quoteDownloadLabel          : $('#quote-download-label').val(),
+                enabledPartialPayment       : enabledPartialPayment,
+                partialNotifyAfterType      : partialNotifyAfterType,
+                partialNotifyAfterQuantity  : partialNotifyAfterQuantity,
+                quotePartialType            : $('#quote-partial-type').val(),
+                allowAutosave               : allowAutosave,
+                disableAutosaveEmail        : disableAutosaveEmail,
+                secureToken                 : $('.quote-secure-token').val()
             },
             success: function(responce){
                 smoke.signal('<?php echo $this->translate('Saved');?>');
