--- a/system/app/Widgets/Quote/views/item/options.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/options.quote.item.phtml
@@ -1,49 +1,57 @@
 <?php if(!empty($this->options)): ?>
 	<?php $currOpts = array();?>
     <?php foreach($this->options as $title => $optData):?>
-        <?php if (is_array($optData) && !empty($optData)): ?>
-            <?php
-            if(empty($optData['option_id']) && !empty($optData['id'])) {
-                $currOpts[$optData['id']] = $optData['selection']['title'];
-            } elseif (empty($optData['id']) && !empty($optData['option_id'])) {
-                $currOpts[$optData['option_id']] = $optData['title'];
-            } else {
-                $currOpts[$optData['option_id']] = $optData['id'];
-            }
-            ?>
+        <?php $hideDefaultOption = $optData['hideDefaultOption'];?>
+        <?php $isDefault = $optData['isDefault'];?>
+        <?php $hideOption = false;?>
+        <?php if ($isDefault == '1' && $hideDefaultOption == '1'):?>
+            <?php $hideOption = true;?>
+        <?php endif;?>
+        <?php if ($hideOption === false):?>
+            <?php if (is_array($optData) && !empty($optData)): ?>
+                <?php
+                if(empty($optData['option_id']) && !empty($optData['id'])) {
+                    $currOpts[$optData['id']] = $optData['selection']['title'];
+                } elseif (empty($optData['id']) && !empty($optData['option_id'])) {
+                    $currOpts[$optData['option_id']] = $optData['title'];
+                } else {
+                    $currOpts[$optData['option_id']] = $optData['id'];
+                }
+                ?>
 
-            <div class="options">
-                <?php if(!isset($optData['type']) || ($optData['type'] !== 'text' || $optData['type'] !== 'textarea' || $optData['type'] !== 'date')): ?>
-                    <?php if(!empty($optData['optionType']) && $optData['optionType'] == Models_Model_Option::TYPE_ADDITIONALPRICEFIELD && is_numeric($optData['title'])) :?>
-                        <?php $optDataTitle = $this->currency($optData['title']); ?>
-                    <?php else :?>
-                        <?php $optDataTitle = $optData['title']; ?>
-                    <?php endif;?>
+                <div class="options">
+                    <?php if(!isset($optData['type']) || ($optData['type'] !== 'text' || $optData['type'] !== 'textarea' || $optData['type'] !== 'date')): ?>
+                        <?php if(!empty($optData['optionType']) && $optData['optionType'] == Models_Model_Option::TYPE_ADDITIONALPRICEFIELD && is_numeric($optData['title'])) :?>
+                            <?php $optDataTitle = $this->currency($optData['title']); ?>
+                        <?php else :?>
+                            <?php $optDataTitle = $optData['title']; ?>
+                        <?php endif;?>
 
-                    <?php if(is_numeric($title)) :?>
-                        <?php if (empty($this->clean)):?>
-                            <span class="option-title"><?php echo $optDataTitle; ?>:</span>
-                         <?php else:?>
-                            <?php echo $optDataTitle; ?>
+                        <?php if(is_numeric($title)) :?>
+                            <?php if (empty($this->clean)):?>
+                                <span class="option-title"><?php echo $optDataTitle; ?>:</span>
+                             <?php else:?>
+                                <?php echo $optDataTitle; ?>
+                            <?php endif;?>
+                        <?php else:?>
+                            <?php if (empty($this->clean)):?>
+                                <span class="option-title"><?php echo $title; ?>:</span>
+                            <?php endif;?>
+                            <span><?php echo $optDataTitle; ?></span>
                         <?php endif;?>
                     <?php else:?>
-                        <?php if (empty($this->clean)):?>
-                            <span class="option-title"><?php echo $title; ?>:</span>
+                        <span><?php echo $optData['title']; ?></span>
+                    <?php endif;?>
+                    <?php if(isset($optData['selection'])): ?>
+                        <?php if($optData['type'] === 'text' || $optData['type'] === 'textarea' || $optData['type'] === 'date'): ?>
+                            <span><?php echo $optData['selection']['title']; ?></span>
+                        <?php else :?>
+                            <span><?php echo $optData['selection']; ?></span>
                         <?php endif;?>
-                        <span><?php echo $optDataTitle; ?></span>
-                    <?php endif;?>
-                <?php else:?>
-                    <span><?php echo $optData['title']; ?></span>
-                <?php endif;?>
-                <?php if(isset($optData['selection'])): ?>
-                    <?php if($optData['type'] === 'text' || $optData['type'] === 'textarea' || $optData['type'] === 'date'): ?>
-                        <span><?php echo $optData['selection']['title']; ?></span>
-                    <?php else :?>
-                        <span><?php echo $optData['selection']; ?></span>
-                    <?php endif;?>
-                <?php endif; ?>
-            </div>
-        <?php endif; ?>
+                    <?php endif; ?>
+                </div>
+            <?php endif; ?>
+        <?php endif;?>
     <?php endforeach; ?>
 <?php endif; ?>
 <?php if(Tools_Security_Acl::isAllowed(Shopping::RESOURCE_STORE_MANAGEMENT)): ?>
