--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -88,6 +88,10 @@
                     <?php echo $this->form->getElement('quotePartialPercentage')->renderViewHelper(); ?>
                     <?php echo $this->form->getElement('quotePartialType')->renderViewHelper(); ?>
                 </p>
+                <p id="quote-payment-type-percentage-block-admin" class="<?php echo $displayPartialPercentagePaymentNotificationClass;?>">
+                    <?php echo $this->form->getElement('defaultQuoteTypeForAdmin')->renderLabel(); ?>
+                    <?php echo $this->form->getElement('defaultQuoteTypeForAdmin')->renderViewHelper(); ?>
+                </p>
         </fieldset>
         <p id="quote-download-label-block">
             <?php echo $this->form->getElement('quoteDownloadLabel')->renderLabel(); ?>
@@ -114,15 +118,18 @@ $(document).ready(function(){
         if ($(this).is(':checked')) {
             $('#quote-payment-type-block').removeClass('hidden');
             $('#quote-payment-type-percentage-block').removeClass('hidden');
+            $('#quote-payment-type-percentage-block-admin').removeClass('hidden');
 
             var paymentType = $('#quote-payment-types').val();
 
             if(paymentType != 'partial_payment' && paymentType != 'partial_payment_signature') {
                 $('#quote-payment-type-percentage-block').addClass('hidden');
+                $('#quote-payment-type-percentage-block-admin').addClass('hidden');
             }
         } else {
             $('#quote-payment-type-block').addClass('hidden');
             $('#quote-payment-type-percentage-block').addClass('hidden');
+            $('#quote-payment-type-percentage-block-admin').addClass('hidden');
         }
     });
 
@@ -179,7 +186,8 @@ $(document).ready(function(){
               enabledPartialPayment = 0,
               maxProductsInQuote = parseInt($('#max-products-in-quote').val()),
               allowAutosave = 0,
-              disableAutosaveEmail = 0;
+              disableAutosaveEmail = 0,
+              defaultQuoteTypeForAdmin = 0;
               // defaultQuoteCreatorId = '';
 
           if($('#auto-quote').prop("checked")){
@@ -192,6 +200,10 @@ $(document).ready(function(){
 
           if($('#enable-quote-default-type').prop("checked")){
               enableQuoteDefaultType = 1;
+          }
+
+          if($('#default-quote-default-type-for-admin').prop("checked")){
+              defaultQuoteTypeForAdmin = 1;
           }
 
           if($('#enabled-partial-payment').prop("checked")){
@@ -226,6 +238,7 @@ $(document).ready(function(){
                 quotePartialType: $('#quote-partial-type').val(),
                 allowAutosave: allowAutosave,
                 disableAutosaveEmail: disableAutosaveEmail,
+                defaultQuoteTypeForAdmin: defaultQuoteTypeForAdmin,
                 secureToken: $('.quote-secure-token').val(),
                 //defaultQuoteCreatorId: $('#default-quote-creator-id').val()
             },
