--- a/system/app/Widgets/Quote/views/signature.phtml
+++ b/system/app/Widgets/Quote/views/signature.phtml
@@ -3,12 +3,18 @@
 <div id="quote-signature-block" class="<?php echo $this->signatureClass;?>">
     <?php if (empty($this->isQuoteSigned)) :?>
         <?php if ($this->accessAllowed === true):?>
+                <?php if ($this->withSignatureInfoField === true) :?>
+                    <textarea id="signature-info-field"><?php echo $this->signatureInfoField;?></textarea>
+                <?php endif;?>
                 <span><?php echo $this->translate('Signature');?>:</span>
                 <div>
                     <img src="<?php echo $this->websiteUrl.'plugins/quote/web/images/signature-placeholder.png';?>">
                     <p><?php echo $this->translate('Client signature will be here');?>:</p>
                 </div>
         <?php else:?>
+            <?php if ($this->withSignatureInfoField === true) :?>
+                <textarea id="signature-info-field"><?php echo $this->signatureInfoField;?></textarea>
+            <?php endif;?>
             <span><?php echo $this->translate('Sign here using cursor or finger on your smartphone');?>:</span>
             <form id="quote-signature-form">
                 <div id="quote-signature-form-refresh" name="quote-signature-form-refresh">
@@ -23,6 +29,13 @@
             </form>
         <?php endif;?>
     <?php else :?>
+        <?php if ($this->withSignatureInfoField === true) :?>
+            <?php if ($this->accessAllowed === true):?>
+                <textarea id="signature-info-field"><?php echo $this->signatureInfoField;?></textarea>
+            <?php else:?>
+                <span class="signature-info-field"></span>
+            <?php endif;?>
+        <?php endif;?>
         <img id="quote-signature-signed-img" src="<?php echo $this->signature;?>">
     <?php endif;?>
 </div>
