--- a/system/app/Widgets/Quote/views/signature.phtml
+++ b/system/app/Widgets/Quote/views/signature.phtml
@@ -1,9 +1,19 @@
 <script src="https://cdn.jsdelivr.net/npm/signature_pad@2.3.2/dist/signature_pad.min.js"></script>
 
+<?php $signatureInfoClass = '';?>
+<?php if ($this->withSignatureInfoField === true) :?>
+    <?php if (empty($this->signatureInfoField)):?>
+        <?php $signatureInfoClass = 'hidden';?>
+    <?php endif;?>
+<?php endif;?>
+
+
 <div id="quote-signature-block" class="<?php echo $this->signatureClass;?>">
     <?php if (empty($this->isQuoteSigned)) :?>
         <?php if ($this->accessAllowed === true):?>
                 <?php if ($this->withSignatureInfoField === true) :?>
+                {$header:signatureinfofieldtext:static}
+<!--                    <label class="signature-info-label">--><?php //echo $this->signatureInfoLabel;?><!--</label>-->
                     <textarea id="signature-info-field"><?php echo $this->signatureInfoField;?></textarea>
                 <?php endif;?>
                 <span><?php echo $this->translate('Signature');?>:</span>
@@ -12,11 +22,13 @@
                     <p><?php echo $this->translate('Client signature will be here');?>:</p>
                 </div>
         <?php else:?>
-            <?php if ($this->withSignatureInfoField === true) :?>
+            <?php if ($this->withSignatureInfoField === true && empty($this->isSignatureSigned)) :?>
+<!--                <label class="signature-info-label">--><?php //echo $this->signatureInfoLabel;?><!--</label>-->
+                {$header:signatureinfofieldtext:static}
                 <textarea id="signature-info-field"><?php echo $this->signatureInfoField;?></textarea>
             <?php endif;?>
             <span><?php echo $this->translate('Sign here using cursor or finger on your smartphone');?>:</span>
-            <form id="quote-signature-form">
+            <form class="<?php echo $signatureInfoClass;?>" id="quote-signature-form">
                 <div id="quote-signature-form-refresh" name="quote-signature-form-refresh">
                     <img id="quote-signature-form-clear" src="<?php echo $this->websiteUrl.'plugins/quote/web/images/refresh.png';?>" alt="<?php echo $this->translate('Clear Signature')?>">
                 </div>
@@ -31,9 +43,11 @@
     <?php else :?>
         <?php if ($this->withSignatureInfoField === true) :?>
             <?php if ($this->accessAllowed === true):?>
+<!--                <label class="signature-info-label">--><?php //echo $this->signatureInfoLabel;?><!--</label>-->
+                {$header:signatureinfofieldtext:static}
                 <textarea id="signature-info-field"><?php echo $this->signatureInfoField;?></textarea>
             <?php else:?>
-                <span class="signature-info-field"></span>
+                <span class="signature-info-field-result"><?php echo $this->signatureInfoField;?></span>
             <?php endif;?>
         <?php endif;?>
         <img id="quote-signature-signed-img" src="<?php echo $this->signature;?>">
@@ -94,6 +108,30 @@
                 }).fail(function (response) {
                     showMessage(JSON.parse(response.responseText), true, 5000);
                 });
+            });
+        });
+
+        $(document).on('blur', '#signature-info-field', function () {
+            var signatureInfoField = $(this).val();
+
+            if (signatureInfoField) {
+                $('#quote-signature-form').removeClass('hidden');
+            } else {
+                $('#quote-signature-form').addClass('hidden');
+            }
+
+            $.ajax({
+                url: $('#website_url').val() + 'plugin/quote/run/saveSignatureInfoField',
+                data: {'quoteId': $('#signature-quote-id').val(), 'signatureInfoField': signatureInfoField},
+                type: 'post',
+                dataType: 'json'
+            }).done(function (response) {
+                if (response.error == '1') {
+                    showMessage(response.responseText, true, 5000);
+                    return false;
+                } else {
+                    //showMessage(response.responseText, false, 3000);
+                }
             });
         });
     });
