Adjust quote purchase info widget

--- a/system/app/Widgets/Quote/views/purchase-qute-info.phtml
+++ b/system/app/Widgets/Quote/views/purchase-qute-info.phtml
@@ -19,27 +19,27 @@
     <span><b><?php echo $this->translate('Payment Method'); ?>:</b></span>
     <br/>
     <?php if (!empty($this->order->getIsFirstPaymentManuallyPaid())): ?>
-        <span><?php echo $this->translate('First payment'); ?>: <?php echo $this->translate('Manually paid'); ?>
-    (<?php echo $this->currency($this->order->getFirstPartialPaidAmount()); ?>) - <?php echo date('d M, Y', strtotime($this->order->getPartialPurchasedOn())); ?>
+        <span><?php echo $this->translate('First payment'); ?>: <?php echo $this->translate('Marked'); ?>
+    (<?php echo $this->currency($this->order->getFirstPartialPaidAmount()); ?>) <?php echo $this->translate('paid'); ?> <?php echo $this->translate('on'); ?> <?php echo date('d M, Y', strtotime($this->order->getPartialPurchasedOn())); ?>
     </span>
     <?php else : ?>
-        <span><?php echo $this->translate('First payment'); ?>: <?php echo $firstPaymentGateway; ?>
-                                        (<?php echo $this->currency($this->order->getFirstPartialPaidAmount()); ?>) - <?php echo date('d M, Y', strtotime($this->order->getPartialPurchasedOn())); ?>
+        <span><?php echo $this->translate('First payment'); ?>: <?php echo $this->translate('Processed'); ?>
+                                        (<?php echo $this->currency($this->order->getFirstPartialPaidAmount()); ?>) <?php echo $this->translate('via'); ?> <?php echo $firstPaymentGateway; ?> <?php echo $this->translate('on'); ?> <?php echo date('d M, Y', strtotime($this->order->getPartialPurchasedOn())); ?>
                                     </span>
     <?php endif; ?>
     <br/>
     <?php if ($this->order->getStatus() === Models_Model_CartSession::CART_STATUS_COMPLETED || $this->order->getStatus() === Models_Model_CartSession::CART_STATUS_SHIPPED || $this->order->getStatus() === Models_Model_CartSession::CART_STATUS_DELIVERED): ?>
         <?php if (!empty($this->order->getIsSecondPaymentManuallyPaid())): ?>
-            <span><?php echo $this->translate('Second payment'); ?>: <?php echo $this->translate('Manually paid'); ?>
-                                            (<?php echo $this->currency($this->order->getSecondPartialPaidAmount()); ?>) - <?php echo date('d M, Y', strtotime($this->order->getPurchasedOn())); ?>
+            <span><?php echo $this->translate('Second payment'); ?>: <?php echo $this->translate('Marked'); ?>
+                                            (<?php echo $this->currency($this->order->getSecondPartialPaidAmount()); ?>) <?php echo $this->translate('paid'); ?> <?php echo $this->translate('on'); ?> <?php echo date('d M, Y', strtotime($this->order->getPurchasedOn())); ?>
                                         </span>
         <?php else : ?>
-            <span><?php echo $this->translate('Second payment'); ?>: <?php echo $secondPaymentGateway; ?>
-                                            (<?php echo $this->currency($this->order->getSecondPartialPaidAmount()); ?>) - <?php echo date('d M, Y', strtotime($this->order->getPurchasedOn())); ?>
+            <span><?php echo $this->translate('Second payment'); ?>: <?php echo $this->translate('Processed'); ?>
+                                            (<?php echo $this->currency($this->order->getSecondPartialPaidAmount()); ?>) <?php echo $this->translate('via'); ?> <?php echo $secondPaymentGateway; ?> <?php echo $this->translate('on'); ?> <?php echo date('d M, Y', strtotime($this->order->getPurchasedOn())); ?>
                                         </span>
         <?php endif; ?>
     <?php endif; ?>
 <?php else : ?>
     <span><?php echo $this->translate('Payment Method'); ?>
-                                    : <?php echo $gateway; ?> - <?php echo date('d M, Y', strtotime($this->order->getPurchasedOn())); ?></span>
+                                    : <?php echo $this->translate('Processed'); ?>  (<?php echo $this->currency($this->order->getTotal()); ?>)  <?php echo $this->translate('via'); ?>  <?php echo $gateway; ?> <?php echo $this->translate('on'); ?> <?php echo date('d M, Y', strtotime($this->order->getPurchasedOn())); ?></span>
 <?php endif; ?>
