--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -136,7 +136,7 @@ $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config'
                 beforeSend: showLoader('Sending quote...')
             }).done(function(response) {
                 hideLoader();
-                var formMessage = '<?php echo $this->translate('Thank you! The quote was generated for you. Our manager will contact you soon to clarify the details');?>';
+                var formMessage = '<?php echo $this->translate('Thank you for submitting a quote request. We will get back to you shortly - You will shortly be redirected to our homepage');?>';
                 if(typeof response.error !== "undefined"){
                     showMessage(formMessage, false, 5000);
                     return false;
@@ -145,9 +145,12 @@ $websiteConfig = Zend_Controller_Action_HelperBroker::getExistingHelper('config'
                     window.location.href = response.id + '.html';
                 } else {
                     showMessage(formMessage, false, 5000);
-                    $.event.trigger({
-                        type: "quoteForm-success"
-                    });
+                    setTimeout(() => {
+                        $.event.trigger({
+                            type: "quoteForm-success"
+                        });
+                        document.location.href="/";
+                    }, "5000")
                 }
             }).fail(function(response) {
                 hideLoader();
