--- a/system/app/Widgets/Quote/views/signature.phtml
+++ b/system/app/Widgets/Quote/views/signature.phtml
@@ -81,7 +81,7 @@
                 quoteId = form.find('#signature-quote-id').val(),
                 signature = form.find('#quote-signature-form-img').val();
 
-            showConfirm('<?php echo $this->translate('Are you happy with your signature?');?>', function() {
+            showConfirmCustom('<?php echo $this->translate('Are you happy with your signature?');?>', '<?php echo $this->translate('Yes');?>', '<?php echo $this->translate('No');?>', function() {
                 $.ajax({
                     url        : $('#website_url').val() + 'api/quote/signature/',
                     type       : 'POST',
